# Pump-bubble

./: .env.example  .gitignore  Caddyfile  Dockerfile  IMPROVEMENTS.md  README.md  deploy.sh  docker-compose.yml  index.js  install.sh  package-lock.json  package.json  test.html
.github/workflows/: deploy.yml
anchor/: Anchor.toml  README.md
anchor/programs/pump-bubble-dao/: Cargo.toml
anchor/programs/pump-bubble-dao/src/: lib.rs
anchor/tests/: pump-bubble-dao.ts
app/: layout.tsx  page.tsx
app/api/events/: route.ts
bot/: .env.example  README.md  package.json  tsconfig.json
bot/src/: index.ts
bot/src/commands/: assignTrader.ts  connectWallet.ts  deposit.ts  execute.ts  governance.ts  help.ts  index.ts  start.ts  vote.ts  withdraw.ts
bot/src/middleware/: auth.ts  membership.ts
bot/src/services/: TelegramDao.txt  (+7 more)
config/: governance.example.json  multisig.example.json  rtmp-streamer.conf  stream.conf  token-gate.example.json
db/: README.md  index.ts  init.sql
db/migrations/: 001_initial_schema.sql
docs/: architecture.md  instruction-format.md  setup-guide.md  user-guide.md
jupyter/: README.md
scripts/: .env.example  README.md  launch-stream.sh  launch-xscreen.sh  manage-services.sh  package.json  start-stream.sh  start-xscreen.sh  stream-control.sh  test-stream.sh
scripts/multisig/: README.md
scripts/test/: README.md  integration-demo.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: dao.ts  governance.ts  index.ts  jupiter.ts  multisig.ts
src/: mock-listener.js  solana-listener.js
systemd/: stream.service  xscreen.service
(+16 files in other folders)
